--- a/WebShop/WebShop/ClientApp/src/index.html
+++ b/WebShop/WebShop/ClientApp/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>WebShop</title>
+    <title>Datacrafter</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
